<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_raca"
        android:layout_width="256dp"
        android:layout_height="20dp"
        android:text="@string/tv_cadastrar_raca"
        />

    <EditText
        android:id="@+id/et_raca"
        android:layout_width="256dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_raca"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_preco_medio"
        android:layout_width="256dp"
        android:layout_height="20dp"
        android:text="@string/tv_cadastrar_preco_medio"
        app:layout_constraintTop_toBottomOf="@id/et_raca"
        />

    <EditText
        android:id="@+id/et_preco_medio"
        android:layout_width="256dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_preco_medio"
        tools:layout_editor_absoluteX="0dp"
        android:inputType="numberDecimal"
        />

    <TextView
        android:id="@+id/indicado_criancas"
        android:layout_width="256dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_preco_medio"
        android:text="@string/tv_cadastrar_indicado_criancas"
        />

    <Switch
        android:id="@+id/sw_indicado_crianca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/indicado_criancas"
        />

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="criarCachorro"
        app:layout_constraintTop_toBottomOf="@+id/sw_indicado_crianca"
        android:text="@string/btn_cadastrar"
        />

    <TextView
        android:id="@+id/tv_cadastro_sucesso"
        android:layout_width="256dp"
        android:layout_height="20dp"
        android:visibility="invisible"
        android:text="@string/tv_cadastrado_sucesso"
        app:layout_constraintTop_toBottomOf="@id/btn_cadastrar"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cachorro_feliz"
        android:id="@+id/iv_cachorro_feliz"
        app:layout_constraintTop_toBottomOf="@id/tv_cadastro_sucesso"
        android:visibility="invisible"
        />



</androidx.constraintlayout.widget.ConstraintLayout>