<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_cachorros_nao_indicados"
        android:layout_width="256dp"
        android:layout_height="20dp"
        android:text="@string/tv_cachorros_nao_indicados"
        app:layout_constraintTop_toBottomOf="@+id/et_cachorros_indicados_value"
 />

    <TextView
        android:id="@+id/tv_cachorros_nao_indicados_value"
        android:layout_width="115dp"
        android:layout_height="20dp"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@+id/tv_cachorros_nao_indicados"
         />

    <TextView
        android:id="@+id/tv_cachorros_indicados"
        android:layout_width="256dp"
        android:layout_height="20dp"
        android:text="@string/tv_cachorros_indicados"
        />

    <TextView
        android:id="@+id/et_cachorros_indicados_value"
        android:layout_width="115dp"
        android:layout_height="20dp"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@+id/tv_cachorros_indicados" />

    <TextView
        android:id="@+id/tv_total_cachorros"
        android:layout_width="256dp"
        android:layout_height="20dp"
        android:text="@string/tv_total_cachorros"
        app:layout_constraintTop_toBottomOf="@+id/tv_cachorros_nao_indicados_value" />

    <TextView
        android:id="@+id/tv_total_cachorros_value"
        android:layout_width="115dp"
        android:layout_height="20dp"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_cachorros" />


</androidx.constraintlayout.widget.ConstraintLayout>